Small bug fixes, made one of the display photo cards bigger, deleted imageToBeManuallyCropped and replaced it with demoProfilePicture, fixed a crash #story[295]

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -255,6 +255,10 @@ img.thumbnail {
     cursor: pointer;
 }
 
+#photosCard {
+    height: 500px;
+}
+
 /*.btn-outline-primary:hover {*/
     /*background-color: #37623B;*/
     /*border-color: #37623B;*/
